[gd_scene load_steps=9 format=3 uid="uid://bvxv5b6nmq63w"]

[ext_resource type="Script" uid="uid://b5pwo17ho4uyi" path="res://craft_slot.gd" id="1_vs883"]
[ext_resource type="PackedScene" uid="uid://s5ehr1388thk" path="res://ui_gem.tscn" id="2_dl41d"]
[ext_resource type="SpriteFrames" uid="uid://c18w0067lhwqr" path="res://images/items.tres" id="2_ea0bt"]
[ext_resource type="Texture2D" uid="uid://e4na8cwspcqj" path="res://images/slot_open.png" id="3_ea0bt"]
[ext_resource type="Texture2D" uid="uid://bcsov5iskgy5q" path="res://images/slot_close.png" id="4_81fa8"]
[ext_resource type="PackedScene" uid="uid://d0m0h6ygbqre" path="res://shop_button.tscn" id="5_dl41d"]

[sub_resource type="Gradient" id="Gradient_jf4wm"]
offsets = PackedFloat32Array(0.819703, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_wbchi"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="EnchantSlot" type="VBoxContainer"]
custom_minimum_size = Vector2(44, 100)
offset_right = 44.0
offset_bottom = 100.0
theme_override_constants/separation = 8
script = ExtResource("1_vs883")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_font_sizes/font_size = 20

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[node name="Control" type="Control" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="SocketSP" type="AnimatedSprite2D" parent="HBoxContainer/Control"]
sprite_frames = ExtResource("2_ea0bt")
centered = false

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="UiGem" parent="Control" instance=ExtResource("2_dl41d")]
position = Vector2(22, 22)

[node name="Open" type="TextureRect" parent="Control"]
layout_mode = 1
offset_right = 44.0
offset_bottom = 44.0
texture = ExtResource("3_ea0bt")

[node name="Close" type="TextureRect" parent="Control"]
visible = false
layout_mode = 1
offset_right = 44.0
offset_bottom = 44.0
texture = ExtResource("4_81fa8")

[node name="CPUParticles2D" type="CPUParticles2D" parent="Control"]
position = Vector2(22, 22)
emitting = false
amount = 16
lifetime = 2.0
one_shot = true
preprocess = 1.7
explosiveness = 0.9
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 80.0
initial_velocity_max = 80.0
orbit_velocity_min = 1.0
orbit_velocity_max = 1.0
scale_amount_min = 3.0
scale_amount_max = 3.0
color_ramp = SubResource("Gradient_jf4wm")

[node name="CPUParticles2D2" type="CPUParticles2D" parent="Control"]
position = Vector2(22, 22)
emitting = false
amount = 20
lifetime = 0.4
one_shot = true
explosiveness = 0.9
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 200.0
linear_accel_min = 20.0
linear_accel_max = 20.0
scale_amount_min = 3.0
scale_amount_max = 3.0
color_ramp = SubResource("Gradient_wbchi")

[node name="ShopButton" parent="." instance=ExtResource("5_dl41d")]
layout_mode = 2
size_flags_horizontal = 4
